From previous commit my coverRed is not responsive to the viewport size, but works correctly after time runs out. 2 commits ago, coverRed was responsive but did not work correctly when start was clicked, no option was chosen and time run out. coverRed then appeared with a size of a previous image from the quiz.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -212,7 +212,7 @@ body{
         align-items: center;
         justify-content: center;
         height: auto;
-        margin-top: 80px;
+        margin-top: 30px;
 
         .main-slider-slides-cnt{
             max-width:700px;
@@ -244,6 +244,12 @@ body{
     }
 }
 
+@media only screen and (max-width:800px) {
+    .main-slider {
+        margin-top: 80px;
+    }
+}
+
 
 .main-slider-slides-cnt {
     margin: 0 60px;
@@ -259,9 +265,16 @@ body{
         max-height: 80%;
         max-width: 100%;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        //align-self: center
+        //justify-content: center;
+        //align-items: center;
     }
+}
+
+#mainSlider  .main-slide.active{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-slide.active {
@@ -280,7 +293,7 @@ body{
     position: absolute;
     left:0;
     right:0;
-    bottom: 0;
+    bottom: -45px;
     margin-left:auto;
     margin-right:auto;
     margin-bottom: 30px;
@@ -372,6 +385,7 @@ body{
 
 .quiz .main-slider-slides-cnt {
     height: auto;
+    max-height: 600px;
 }
 
 .quiz .quiz-text {
@@ -429,11 +443,7 @@ body{
     }
 }
 
-@media only screen and (max-width:820px) {
-    .cover .coverRed {
-        height: 45%;
-    }
-}
+
 
 @media only screen and (max-width:590px) {
     .cover .coverRed p{
